--- a/.github/workflows/daily_nyt.yml
+++ b/.github/workflows/daily_nyt.yml
@@ -11,17 +11,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repo
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up Python
+
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # Install dependencies
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -29,12 +28,12 @@ jobs:
           pip install psycopg2-binary python-dotenv sqlmodel requests
 
       # Run main.py (fetch stories)
-      - name: Run main.py
+      - name: Run collect_data.py
         env:
           NYT_API_KEY: ${{ secrets.NYT_API_KEY }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
-          python -m app.main
+          python -m app.collect_data
 
       # Run analytics_runner.py (aggregate stats)
       - name: Run analytics_runner.py
