--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
 # Environment files
 .env
 .env.local
-*.env
+.env.development.local
+.env.production.local
+
 __pycache__/
 *.pyc
 venv/
 nyt.db
+
+node_modules/
+dist/
+.vite/
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.DS_Store
+Thumbs.db
